--- a/public/stylesheets/app/home.less
+++ b/public/stylesheets/app/home.less
@@ -228,6 +228,10 @@
   background-color: @lightgreen;
   text-align: center;
 
+  .row {
+    margin: 0;
+  }
+
   h3 {
     text-align: center;
 
@@ -325,10 +329,4 @@
       font-size: 1.2em;
     }
   }
-  .how-we-manage {
-
-   .center,.right,.left{text-align: left}
-   line-height: 1em;
- }
-
 }
